# gigaevo-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  debug.txt  file.txt  pyproject.toml  pytest.ini  run.py  run.sh  serve_redis.sh  serve_vllm.sh  serve_vllm.txt
.github/workflows/: build.yml
config/: config.yaml
config/algorithm/: _base.yaml  multi_island.yaml  single_island.yaml  single_island_2d.yaml  single_island_2d_exploration.yaml  single_island_exploration.yaml  single_island_fitness_prop_fixed_temp.yaml  single_island_weighted.yaml
config/constants/: base.yaml  endpoints.yaml  evolution.yaml  islands.yaml  llm.yaml  logging.yaml  pipeline.yaml  redis.yaml  runner.yaml
config/evolution/: default.yaml
config/experiment/: base.yaml  full_featured.yaml  multi_island_complexity.yaml  multi_llm_exploration.yaml
config/llm/: google.yaml  heterogeneous.yaml  heterogeneous_bandit.yaml  openrouter_bandit.yaml  openrouter_ensemble.yaml  single.yaml
config/loader/: directory.yaml  redis_selection.yaml
config/logging/: tensorboard.yaml  wandb.yaml
config/metrics/: code_complexity.yaml  default.yaml
config/pipeline/: auto.yaml  cma_opt.yaml  custom.yaml  evolution_aware.yaml  optuna_opt.yaml  standard.yaml  with_context.yaml
config/prompts/: default.yaml
config/redis/: default.yaml
config/runner/: default.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DAG_SYSTEM.md  EVOLUTION_STRATEGIES.md  OPTUNA_OPTIMIZATION.md  QUICKSTART.md  USAGE.md
gigaevo/: __init__.py  exceptions.py
gigaevo/config/: __init__.py  helpers.py  resolvers.py
gigaevo/database/: merge_strategies.py  program_storage.py  redis_program_storage.py  state_manager.py
gigaevo/entrypoint/: constants.py  default_pipelines.py  evolution_context.py
gigaevo/llm/: bandit.py  models.py  token_tracking.py
gigaevo/problems/: config.py  context.py  initial_loaders.py  layout.py
gigaevo/programs/: constants.py  core_types.py  program.py  program_state.py  utils.py
gigaevo/prompts/: __init__.py
gigaevo/runner/: __init__.py  dag_blueprint.py  dag_runner.py
gigaevo/utils/: __init__.py  experiment.py  json.py  logger_setup.py  metrics_collector.py  metrics_tracker.py  serve.py
problems/chains/: chain_runner.py  chain_validation.py  client.py  types.py  utils.py
problems/gigaevo_mediq_task/: helper.py  metrics.yaml  task_description.txt  validate.py
problems/heilbron/: helper.py  metrics.yaml  task_description.txt  validate.py
problems/hexagon_improver/: helper.py  metrics.yaml  task_description.txt  validate.py
problems/hexagon_pack/: metrics.yaml  task_description.txt  validate.py
problems/kissing_number_11d/: metrics.yaml  task_description.txt  validate.py
problems/kissing_number_12d/: metrics.yaml  task_description.txt  validate.py
problems/optimization/: context.py  metrics.yaml  task_description.txt  validate.py
problems/prompts/: client.py  types.py  utils.py
problems/santa2025_n100/: metrics.yaml  task_description.txt  validate.py
problems/santa2025_tree_packing/: helper.py  metrics.yaml  task_description.txt  validate.py  visualize_solution.py
tests/: conftest.py  test_metrics_collector.py  test_metrics_context.py  test_metrics_formatter.py  test_metrics_tracker.py  test_program.py  test_stage_registry.py
tools/: README.md  compare_programs.py  comparison.py  exec_runner.py  playground.ipynb  profiler.py  redis2pd.py  run_eval.sh  utils.py
(+415 files in other folders)
