[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gigaevo"
version = "1.11.1"
description = "Advanced evolutionary computation framework with MAP-Elites and DAG-based program execution"
authors = [
    {name = "GigaEvo Team", email = "team@gigaevo.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

dependencies = [
    "redis>=4.5.0",
    "loguru>=0.7.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "fakeredis[lua]>=2.19.0",
    "orjson",
    "diffpatch",
    "openai>=1.0.0",
    "networkx",
    "scipy",
    "pandas",
    "wandb",
    "cloudpickle",
    "matplotlib",
    "pandas==2.2.2",
    "seaborn",
    "tensorboardX",
    "python-dotenv",
    "click",
    "jinja2",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain>=0.3.0",
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = ["pre-commit", "python-semantic-release"]
opt = ["jax", "optax"]

[project.urls]
Repository = "https://github.com/gigaevo/gigaevo"
Documentation = "https://gigaevo.readthedocs.io"
Issues = "https://github.com/gigaevo/gigaevo/issues"
Changelog = "https://github.com/gigaevo/gigaevo/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["gigaevo*"]

[tool.ruff]
line-length = 88  # same as in black
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
select = ["E", "F", "I"]
ignore = ["E501"]  # Ignore line-too-long (handled by ruff-format)

[tool.ruff.lint.per-file-ignores]
"run.py" = ["E402"]
"run_hydra.py" = ["E402"]
"tools/**/*.py" = ["E402"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["gigaevo"]
force-sort-within-sections = true

# [tool.mypy]
# python_version = "3.12"
# warn_unused_configs = true
# check_untyped_defs = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# strict_optional = true
# no_implicit_optional = true
# warn_no_return = true
# exclude = ["build/", "dist/"]

# [[tool.mypy.overrides]]
# module = [
#     "redis.*",
#     "loguru.*",
#     "numpy.*",
#     "matplotlib.*",
#     "pandas.*",
#     "hydra.*",
#     "omegaconf.*",
# ]
# ignore_missing_imports = true

[tool.semantic_release]
version_variables = ["gigaevo/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
major_on_zero = true
allow_zero_version = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "style",
    "refactor",
    "test",
]

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
